# VitaMonoLoader-vitasdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
VMLCoreAssemblies/: CMakeLists.txt  environment.c  main.c
VMLCoreAssemblies/patches/: patches.c  patches.h
VMLCoreAssemblies/patches/mono/metadata/: file-io.c  file-io.h  icall.c  icall.h
VMLVita2D/: CMakeLists.txt  main.c
VML_Sample1/: CMakeLists.txt  main.c
VML_Sample2/: CMakeLists.txt  main.c
VitaMonoLoader/: CMakeLists.txt  main.c
cmake/: RETools.cmake  VMLBuild.cmake
headers/: CMakeLists.txt
headers/VML/: VML.h  VMLCoreAssemblies.h  VMLTools.h
headers/mono/: eglib-config.h
headers/mono/arch/amd64/: amd64-codegen.h
headers/mono/arch/arm64/: arm64-codegen.h
headers/mono/arch/ppc/: ppc-codegen.h
headers/mono/arch/riscv/: riscv-codegen.h
headers/mono/arch/s390x/: s390x-codegen.h
headers/mono/dis/: push-pop.h
headers/mono/eglib/: glib.h  gmodule-win32-internals.h  gmodule.h  unicode-data.h
headers/mono/metadata/: abi-details.h  assembly-internals.h  attach.h  callspec.h  cil-coff.h  class-init.h  cominterop-win32-internals.h  console-io.h  console-win32-internals.h  coree-internals.h  coree.h  culture-info.h  debug-internals.h  debug-mono-ppdb.h  debug-mono-symfile.h  exception-internals.h  fdhandle.h  file-mmap.h  filewatcher.h  gc-internals.h  handle-decl.h  handle.h  icall-internals.h  icall-table.h  icall-windows-internals.h  loaded-images-internals.h  loader-internals.h  locales.h  lock-tracer.h  marshal-internals.h  marshal-windows-internals.h  mempool-internals.h  method-builder-ilgen-internals.h  method-builder-ilgen.h  method-builder-internals.h  method-builder.h  monitor.h  mono-basic-block.h  mono-config-dirs.h  mono-endian.h  (+36 more)
headers/mono/mini/: cfgdump.h  debugger-state-machine.h  dwarfwriter.h  ee.h  image-writer.h  lldb.h  llvm-jit.h  llvm-runtime.h  mini-amd64.h  mini-arm.h  mini-llvm-cpp.h  mini-mips.h  mini-ppc.h  mini-sparc.h  mini-windows.h  mini.h  trace.h
headers/mono/mini/interp/: interp-internals.h  mintops.h
headers/mono/native/: pal_config.h
headers/mono/profiler/: aot.h  log.h
headers/mono/sgen/: gc-internal-agnostic.h  sgen-array-list.h  sgen-conf.h  sgen-gc.h  sgen-hash-table.h  sgen-pointer-queue.h
headers/mono/utils/: atomic.h  checked-build.h  gc_wrapper.h  hazard-pointer.h  json.h  lock-free-alloc.h  lock-free-array-queue.h  lock-free-queue.h  mach-support.h  memfuncs.h  mono-compiler.h  mono-complex.h  mono-conc-hashtable.h  mono-coop-mutex.h  mono-coop-semaphore.h  mono-digest.h  mono-dl-windows-internals.h  mono-experiments.h  mono-flight-recorder.h  mono-hwcap-vars.h  mono-hwcap.h  mono-io-portability.h  mono-lazy-init.h  mono-logger-internals.h  mono-machine.h  mono-membar.h  mono-memory-model.h  mono-merp.h  mono-mmap-windows-internals.h  mono-mmap.h  mono-networkinterfaces.h  mono-os-mutex.h  mono-os-semaphore.h  mono-os-wait.h  mono-path.h  mono-poll.h  mono-proclib-windows-internals.h  mono-proclib.h  mono-property-hash.h  mono-rand.h  (+21 more)
lib/SUPRXManager/: CMakeLists.txt
lib/SceLibcMonoBridge/: CMakeLists.txt  libc.yaml
lib/mono-vita/: CMakeLists.txt
lib/prebuilt/: CMakeLists.txt
lib/pthread/: CMakeLists.txt
tools/: clean-nids.py  nids-extract-wrapper.py  replace-nid-symbols-sce.py
